--- a/.env
+++ b/.env
@@ -12,3 +12,8 @@ DB_TIMEZONE=UTC
 
 VIDEO_UPLOAD_PATH=uploads/videos
 IMAGE_UPLOAD_PATH=uploads/images
+VIDEO_API_PATH=api/video
+IMAGE_API_PATH=api/image
+
+COMPOSE_PROFILES=dev
+WEB_PORT=8080
